--- a/package.json
+++ b/package.json
@@ -4,5 +4,12 @@
   "main": "index.js",
   "repository": "https://github.com/alysson3dev/git-lint.git",
   "author": "Alisson Santos <craftgames.alysson@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cli-select": "^1.1.2"
+  },
+  "devDependencies": {
+    "@types/node": "^15.0.1",
+    "typescript": "^4.2.4"
+  }
 }
