--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@types/node": "^15.0.1",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.4"
-  }
+  },
+  "bin": {
+    "commit": "./src/index.ts"
+  },
+  "preferGlobal": true
 }
