--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Alisson Santos <craftgames.alysson@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.1.1",
     "cli-select": "^1.1.2"
   },
   "devDependencies": {
