--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
   "name": "git-lint",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "repository": "https://github.com/alysson3dev/git-lint.git",
   "author": "Alisson Santos <craftgames.alysson@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true ts-node src/index.ts",
+    "build": "tsc -p ."
+  },
   "dependencies": {
+    "@types/figlet": "^1.5.1",
     "chalk": "^4.1.1",
-    "cli-select": "^1.1.2"
+    "figlet": "^1.5.0",
+    "inquirer": "^8.0.0",
+    "list-git-branches": "^1.0.0"
   },
   "devDependencies": {
+    "@types/inquirer": "^7.3.1",
     "@types/node": "^15.0.1",
-    "nodemon": "^2.0.7",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "bin": {
