--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "chalk": "^4.1.1",
     "figlet": "^1.5.0",
     "inquirer": "^8.0.0",
-    "list-git-branches": "^1.0.0"
+    "list-git-branches": "^1.0.0",
+    "simple-spellchecker": "^1.0.2",
+    "teacher": "^0.1.0"
   },
   "devDependencies": {
     "@types/inquirer": "^7.3.1",
@@ -29,7 +31,7 @@
     "typescript": "^4.2.4"
   },
   "bin": {
-    "commit": "./src/index.ts"
+    "commit": "./dist/index.js"
   },
   "preferGlobal": true
 }
